Add validation in nobel service